fixed phone alignment

--- a/css/style.css
+++ b/css/style.css
@@ -310,13 +310,13 @@ textarea {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 360px; }
+  height: 410px; }
 
 .column_other {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 500px; }
+  height: 510px; }
 
 .column_ {
   float: left;
@@ -786,9 +786,6 @@ textarea {
       .main-footer__lower {
         padding: 3.5rem 0; } }
 
-.other__icon {
-    margin-right: 0rem;
-    width: 2.5rem; }
 .skills {
   display: flex;
   flex-wrap: wrap; }
