--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -165,14 +165,14 @@
   float: left;
   width: 50%;
   padding: 10px;
-  height: 360px;  }
+  height: 410px;  }
 
 
 .column_other {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 500px;  }
+  height: 510px;  }
 
 .column_ {
   float: left;
